# fetal_heart_analysis

./: README.md
cpp/: CMakeLists.txt
cpp/exec/src/: test_rotinv.cpp  test_square.cpp  train_rotinv.cpp  train_square.cpp
cpp/features/: CMakeLists.txt
cpp/features/include/: histograms.h  imageFeatureProcessor.h  orientationTestingFunctor.h  randomForestFunctorBase.hpp  randomForestFunctorBase.tpp  rectangleFilterDefines.h  squareTestingFunctors.h  squareTrainingFunctors.h  trainingFunctors.h
cpp/features/src/: histograms.cpp  imageFeatureProcessor.cpp  orientationTestingFunctor.cpp  squareTestingFunctors.cpp  squareTrainingFunctors.cpp  trainingFunctors.cpp
cpp/filters/include/: particleFilterBase.hpp  particleFilterBase.tpp  particleFilterJoinedSingleStructs.hpp  particleFilterJoinedSingleStructs.tpp  particleFilterJoinedStructsPCA.hpp  particleFilterJoinedStructsPCA.tpp  particleFilterPosClass.hpp  particleFilterPosClass.tpp  particleFilterPosClassJoinedOri.hpp  particleFilterPosClassJoinedOri.tpp  particleFilterPosClassJoinedOriPhase.hpp  particleFilterPosClassJoinedOriPhase.tpp  particleFilterPosClassOri.hpp  particleFilterPosClassOri.tpp  particleFilterPosClassPhase.hpp  particleFilterPosClassPhase.tpp  particleFilterPosClassPhaseOri.hpp  particleFilterPosClassPhaseOri.tpp  particleFilterSingleStructs.hpp  particleFilterSingleStructs.tpp  particleFilterSubStructs.hpp  particleFilterSubStructs.tpp  stateModelBase.hpp  stateModelBase.tpp  stateModelOri.hpp  stateModelOri.tpp  stateModelOriAwarePosClass.hpp  stateModelOriAwarePosClass.tpp  stateModelPhase.hpp  stateModelPhase.tpp  stateModelPosClass.hpp  stateModelPosClass.tpp  stateModelPosClassOri.hpp  stateModelPosClassOri.tpp  stateModelSingleStructure.hpp  stateModelSingleStructure.tpp  stateModelSubstructuresPCA.hpp  stateModelSubstructuresPCA.tpp  statePosClass.h  structVisible_enum.h
cpp/forests/include/: RIHoughForest.hpp  RIHoughForest.tpp  RIHoughNode.hpp  RIHoughNode.tpp  RIHoughOutput.hpp  RIHoughOutput.tpp  circCircSingleRegressor.hpp  circCircSingleRegressor.tpp  classOriLabel_t.h  classPolarOffsetLabel.h  jointOriNodeDist.hpp  jointOriNodeDist.tpp  jointOriOutputDist.hpp  jointOriOutputDist.tpp  jointOriPhaseNodeDist.hpp  jointOriPhaseNodeDist.tpp  jointOriPhaseOutputDist.hpp  jointOriPhaseOutputDist.tpp  jointOriPhaseRegressor.hpp  jointOriPhaseRegressor.tpp  jointOrientationRegressor.hpp  jointOrientationRegressor.tpp  orientationRegressionFunctorBase.h  phaseOriLabel_t.h  vonMisesOffsetDistribution.hpp
cpp/utilities/: CMakeLists.txt
cpp/utilities/include/: displayFunctions.h  mp_cat_param_pack.hpp  mp_transform.hpp  mp_tuple_repeat.hpp  mp_type_repeater.hpp  thesisUtilities.h
cpp/utilities/src/: displayFunctions.cpp  thesisUtilities.cpp
scripts/analysis/: accuracy_vs_time.py  confusion.py  feature_set_bars.py  forest_test_graphs.py  parse_output.py  particles_graphs.py  sensitivity.py  sensitivity_filtered.py  structure_bar_plot.py  summarise.py  time_bars.py
scripts/datasets/: heartandsubsdataset.py  heartdatasets.py  substrdatasetfromtracks.py
scripts/filter_fit/: fit_class_ori_filter.py  fit_partitioned_structs_filter.py  fit_pca_structs_filter.py  fit_phase_filter.py  multiple_filters.py  test
scripts/filter_fit/params/: class_ori_filter_params  phase_filter_params  structures_filter_params
scripts/masks/: maskcrop.py
scripts/run/: test_experiment_file.py  train_experiment_file.py
scripts/utilities/: CPBUtils.py  test_argparse.py  train_argparse.py
